--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,4 +85,18 @@ html[dir="rtl"] body {
 }
 
 
-/*Calendar CSS*/
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.4s ease-out forwards;
+}
